--- a/index.html
+++ b/index.html
@@ -33,37 +33,37 @@
     </tr>
     <tr>
       <td>Poverty</td>
-      <td> Yellow to represent </td>
+      <td> Yellow to represent caution </td>
       <td class="poverty-color">#FFD700</td>
     </tr>
     <tr>
       <td>Median Household Income</td>
-      <td>Symbolizes </td>
+      <td>Green to sybmbolize wealth </td>
       <td class="income-color">#FF5733</td>
     </tr>
     <tr>
       <td>Education Less Than High School</td>
-      <td>Education Less Than High School Percentage</td>
+      <td>Bright color to help find under-educated counties</td>
       <td class="education-color">#D8BFD8</td>
     </tr>
     <tr>
       <td>Air Quality</td>
-      <td>Air Quality</td>
+      <td>Light blue represents air</td>
       <td class="air-quality-color">#ADD8E6</td>
     </tr>
     <tr>
       <td>Park Access</td>
-      <td>Park Access</td>
+      <td>Dark green to represent plant life in parks</td>
       <td class="park-access-color">#367d3e</td>
     </tr>
     <tr>
       <td>Inactive</td>
-      <td>Percent Inactive</td>
+      <td>Light colors that represent inactivity</td>
       <td class="inactive-color">#FFC0CB</td>
     </tr>
     <tr>
       <td>Smoking</td>
-      <td>Percent Smoking</td>
+      <td>Grey to represent smoke</td>
       <td class="smoking-color">#FF69B4</td>
     </tr>
     <tr>
@@ -73,42 +73,42 @@
     </tr>
     <tr>
       <td>Elderly</td>
-      <td>Elderly Percentage</td>
+      <td>A more matured color to show age</td>
       <td class="elderly-color">#D8BFD8</td>
     </tr>
     <tr>
       <td>Number of Hospitals</td>
-      <td>Number of Hospitals</td>
+      <td>Light blue to find spots where hospitals are frequenctly </td>
       <td class="hospitals-color">#20B2AA</td>
     </tr>
     <tr>
       <td>Number of Primary Care Physicians</td>
-      <td>Number of Primary Care Physicians</td>
+      <td>Represents wisdom and professionalism, fitting for primary care.</td>
       <td class="physicians-color">#9370DB</td>
     </tr>
     <tr>
       <td>No Health Insurance</td>
-      <td>Percent No Health Insurance</td>
+      <td>All health related attributes are different shades of red, which represents urgency</td>
       <td class="insurance-color">#FF8C00</td>
     </tr>
     <tr>
       <td>High Blood Pressure</td>
-      <td>Percent High Blood Pressure</td>
+      <td>All health related attributes are different shades of red, which represents urgency</td>
       <td class="blood-pressure-color">#FF4500</td>
     </tr>
     <tr>
       <td>Coronary Heart Disease</td>
-      <td>Percent Coronary Heart Disease</td>
+      <td>All health related attributes are different shades of red, which represents urgency</td>
       <td class="heart-disease-color">#7B68EE</td>
     </tr>
     <tr>
       <td>Stroke</td>
-      <td>Percent Stroke</td>
+      <td>All health related attributes are different shades of red, which represents urgency</td>
       <td class="stroke-color">#FF7377</td>
     </tr>
     <tr>
       <td>High Cholesterol</td>
-      <td>Percent High Cholesterol</td>
+      <td>All health related attributes are different shades of red, which represents urgency</td>
       <td class="cholesterol-color">#FF5733</td>
     </tr>
   </table>
