--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <br><br>
 
     <h3>Spatial visualization via Choropleth Map</h3>
-    <img src="chloropleth1.png" alt="Image Description" width="800" height="500">
+    <img src="chlropleth.png" alt="Image Description" width="800" height="500">
     <br><br>
     <h2> Interesting Findings from the Application: </h2>
     <br><br>
