--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </ul>
     <!-- <p> People that fall in the lower to the middle of the Median household income have the highest percentage of no health insaurance. This data represents that health insaurance has become so expensive that even the average earners are unable to afford it.</p> -->
     <br><br>
-    <img src="park_access.png" alt="Image Description" width="800" height="500">
+    <img src="park_access1.png" alt="Image Description" width="800" height="500">
     <br><br>
     <ul>
     <li> Most national parks are located in the Utah/Washington area, as is evident from this map.</li>
